# ct-research

./: .gitattributes  .gitignore  README.md  final_waitlist.xlsx  manual_node_update.md  network_register.xlsx  network_waitlist.xlsx  registry.xlsx  test.json  waitlist.xlsx
ct-app/: .coveragerc  .dockerignore  .env.example  .envrc  .pre-commit-config.yaml  Dockerfile  METRICS.md  Makefile  README.md  flake.nix  get_params.sh  message_queue.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run.sh  test_blokli_query.py  test_endurance_rules.yaml
ct-app/.configs/: core_jura_config.yaml  core_local_config.yaml  core_prod_config.yaml  core_staging_config.yaml  endurance_rules.example.yaml  nft_holders.txt
ct-app/__airdrop__/: __init__.py  __main__.py
ct-app/__distribution_statistics__/: __main__.py
ct-app/__simulations__/: all_01H7Z22K1VRTXCWJJJFV2A64VP.csv  apy_comparison.ipynb  nft_01H7Z2W99SMWJ01YN552WSRADV.csv
ct-app/aggregator/: __init__.py  __main__.py  aggregator.py  routes.py  setup.py  utils.py
ct-app/aggregator_trigger/: __init__.py  __main__.py  aggregator_trigger.py
ct-app/assets/: parameters.json  parameters_schema.py
ct-app/core/: __init__.py  __main__.py  address.py  baseclass.py  core.py  ctcore.py  decorators.py  flags.py  node.py  parameters.py  peer.py  pyproject.toml  utils.py
ct-app/core/api/: __init__.py  api_request_objects.py  api_returned_objects.py  channelstatus.py  hoprd_api.py  protocol.py  pyproject.toml  request_objects.py  response_objects.py  session.py
ct-app/core/blokli/: adapters.py  blokli_provider.py  entries.py  providers.py  pyproject.toml  type.py
ct-app/core/components/: __init__.py  address.py  api_types.py  asyncloop.py  balance.py  baseclass.py  channelstatus.py  conversions.py  decorators.py  economic_model_types.py  environment_utils.py  flags.py  graphql_providers.py  hoprd_api.py  lockedvar.py  logs.py  message_queue.py  messagequeue.py  messages.py  metrics.py  node_helper.py  parameters.py  pattern_matcher.py  peer.py  peer_session_management.py  pyproject.toml  session_rate_limiter.py  session_to_socket.py  socket_through_network.py  tcpudp_server.py  utils.py
ct-app/core/config_parser/: __init__.py  base_classes.py  blokli.py  channel.py  economic_model.py  flags.py  host.py  parameters.py  peer.py  pyproject.toml  sessions.py
ct-app/core/economic_model/: __init__.py  budget.py  economic_model_legacy.py  economic_model_sigmoid.py  model_types.py  pyproject.toml
ct-app/core/messages/: message_metrics.py  pyproject.toml
ct-app/core/mixins/: __init__.py  channel.py  economic_system.py  network_sync.py  nft.py  peer_relay.py  peers.py  peers_allocation.py  peers_discovery.py  protocols.py  pyproject.toml  rpc.py  runtime_state.py  session.py  state.py  subgraph.py
ct-app/core/model/: __init__.py  allocation_entry.py  budget.py  economic_model.py  economic_model_legacy.py  economic_model_sigmoid.py  nodesafe_entry.py  parameters.py  peer.py  subgraph_entry.py  subgraph_type.py  subgraph_url.py  topology_entry.py
ct-app/core/rpc/: __init__.py  providers.py  pyproject.toml  query_provider.py
ct-app/core/services/: base_drain_coordinator.py  blokli_repository.py  channel_lifecycle_coordinator.py  economic_model_refresh_coordinator.py  link_state_store.py  network_state_service.py  network_sync_orchestrator.py  network_update_coordinator.py  node_runtime_factory.py  send_plan_coordinator.py  session_lifecycle_coordinator.py  shutdown_coordinator.py
ct-app/core/subgraph/: __init__.py  graphql_provider.py  mode.py  providers.py  pyproject.toml  type.py  url.py
ct-app/core/subgraph_queries/: safes_balance.graphql  staking.graphql  wxhopr_transactions.graphql
ct-app/core/test/: test_components_utils.py
ct-app/core/tests/: test_core_utils.py
ct-app/core/types/: asyncloop.py  message_format.py  message_queue.py  network_models.py  (+6 more)
ct-app/database/: __init__.py  database_connection.py  models.py  utils.py
ct-app/economic_handler/: __main__.py  economic_handler.py  economic_model.py  metric_table_entry.py  peer.py  subgraph_entry.py  topology_entry.py  utils_econhandler.py
ct-app/message_queue/: __main__.py  instance.py  message_queue.py
ct-app/metrics/: relayed_token.ipynb
ct-app/namtsop/: namstop_task.py  namtsop_tasks.py
ct-app/netwatcher/: __init__.py  __main__.py  address.py  latency_measure.py  netwatcher.py  peer.py
ct-app/node_onboarding/: waitlist_dufour.ipynb
ct-app/notebooks/: apr_simulation.ipynb  relayed_token.ipynb
ct-app/postman/: __init__.py  __main__.py  postman_tasks.py  task_status.py  utils.py
ct-app/postman_feedback/: postman_feedback_task.py
ct-app/scripts/: close_all_channels.py  close_all_sessions.py  core_prod_config.yaml  core_production_config.yaml  core_staging_config.yaml  generate_example_config.py  generate_metrics_doc.py  list_required_parameters.py  list_required_parameters.sh  open_single_session.py  rpc_calls.py  run.sh  send_load_through_session.py  test_0_hop_sessions.py  test_sessions.py  verifiy_config.py  verify_config.py
ct-app/test/: _test_core.py  conftest.py  decorators_patches.py  pyproject.toml  test_config.yaml  test_core.py  test_metrics_doc.py  test_node.py
ct-app/test_module/: __main__.py
ct-app/tests/: test_aggregator.py  test_aggregator_trigger.py  test_aggregator_utils.py  test_db_connection.py  test_economic_handler.py  test_hopr_node.py  test_hoprd_api_helper.py  test_hoprd_bad_api_helper.py  test_netwatcher.py  test_netwatcher_peer.py  test_other_endpoints.py  test_postman.py  test_utils.py  test_utils_econhandler.py
ct-app/tests_endurance/: __init__.py  __main__.py  endurance_test.py  rules.json  sample_test.py  test_fund_channels.py  test_get_channels.py  test_main.py  test_metric.py  test_sample_counter.py  test_send_messages.py
ct-app/tests_unittest/: test_aggregator_trigger.py  test_core_utils.py  test_economic_handler.py  test_hoprd_bad_api_helper.py  test_netwatcher.py  test_other_endpoints.py
ct-app/tools/: __init__.py  decorator.py  exit_codes.py  hopr_api_helper.py  hopr_node.py  utils.py
(+389 files in other folders)
