[project]
name = "ct-app"
version = "3.12.0"
requires-python = ">=3.13"
dependencies = [
    "core",
]

[tool.uv.sources]
core = { workspace = true }
test = { workspace = true }

[tool.uv.workspace]
members = [
    "core", 
    "core/api",
    "core/components",
    "core/subgraph",
    "core/rpc",
    "test" 
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "dotenv>=0.9.9",
    "test",
    "pytest-cov>=6.2.1",
]
lint = [
    "black==25.1.0",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
lint.select = ["E", "F"]
lint.ignore = []

[tool.pytest.ini_options]
testpaths = ["test"]
minversion = "7.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = ["-ra", "-q"]

log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
