[project]
name = "ct-app"
version = "3.14.4"
requires-python = ">=3.14"
dependencies = ["core"]

[tool.setuptools]
packages = ["core", "test"]

[tool.uv.sources]
core = { workspace = true }
test = { workspace = true }

[tool.uv.workspace]
members = [
    "core",
    "core/api",
    "core/blokli",
    "core/components",
    "core/config_parser",
    "core/messages",
    "core/mixins",
    "core/types",
    "test"
]

[dependency-groups]
dev = [
    "ruff>=0.11.4",
    "dotenv>=0.9.9",
    "test",
    "pytest-cov>=6.2.1",
    "mypy>=1.18.2",
]
lint = [
    "black==25.1.0",
]
typecheck = [
    "mypy>=1.18.2",
]

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
lint.select = ["E", "F"]
lint.ignore = []

[tool.pytest.ini_options]
testpaths = ["test"]
minversion = "7.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = ["-ra", "-q"]
markers = [
    "stress: marks tests as stress tests (deselect with '-m \"not stress\"')",
    "benchmark: marks tests as performance benchmarks (run with '-m benchmark')"
]

log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.mypy]
# Python version
python_version = "3.14"

# Follow imports
follow_imports = "normal"
ignore_missing_imports = true

# Show error codes
show_error_codes = true
show_column_numbers = true
pretty = true

# Explicit package bases to avoid module name conflicts
explicit_package_bases = true

# Warn on certain issues but don't require full type annotations
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

# Check the bodies of functions without type annotations
check_untyped_defs = true

# Allow operations on Optional without strict checking
no_implicit_optional = true
strict_optional = false

# Paths to check
files = ["core/", "test/", "scripts/"]

# Exclude patterns
exclude = "^(core/.*/__pycache__/|core/.*/\\..*|\\.venv/|build/|dist/).*"

# Per-module options - external libraries
[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true

# Per-module options - complex files that need refactoring
# [[tool.mypy.overrides]]
# module = [
#     "core.config_parser.base_classes",
#     "core.components.logs",
#     "core.config_parser.economic_model",
#     "core.types.message_format",
#     "core.mixins.economic_system",
#     "core.mixins.channel.*",
#     "core.mixins.session.*",
#     "core.node",
# ]
# ignore_errors = true
