[project]
name = "core"
version = "3.8.0"
requires-python = ">=3.12"
dependencies = ["core-api", "core-components", "core-economic_model", "core-subgraph"]

[tool.uv.sources]
core-api = { workspace = true }
core-components = { workspace = true }
core-economic_model = { workspace = true }
core-subgraph = { workspace = true }