[project]
name = "core"
version = "3.11.0"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.8",
    "core-api",
    "core-components",
    "core-subgraph",
]

[tool.setuptools]
packages = ["api", "components", "mixins", "subgraph"]

[tool.uv.sources]
core-api = { workspace = true }
core-components = { workspace = true }
core-subgraph = { workspace = true }
