[project]
name = "core"
version = "3.11.0"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.8",
    "core-api",
    "core-blokli",
    "core-components",
    "core-config-parser",
    "core-messages",
    "core-mixins",
    "core-types"
]

[tool.setuptools]
packages = [
    "core",
    "core.api",
    "core.blokli",
    "core.components",
    "core.config_parser",
    "core.messages",
    "core.mixins",
    "core.types",
]
package-dir = {"core" = "."}

[tool.uv.sources]
core-api = { workspace = true }
core-components = { workspace = true }
core-blokli = { workspace = true }
core-config-parser = { workspace = true }
core-messages = { workspace = true }
core-mixins = { workspace = true }
core-types = { workspace = true }
