[project]
name = "core-components"
version = "1.1.0"
requires-python = ">=3.13"
dependencies = [
    "prometheus_client>=0.22.0",
]

[tool.setuptools]
packages = ["core.components.config_parser", "core.components.messages"]
package-dir = {"core.components.config_parser" = "config_parser", "core.components.messages" = "messages"}