[project]
name = "core-subgraph"
version = "1.0.1"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.10.11",
    "multidict>=6.4.3",
    "prometheus_client==0.21.1",
    "pyyaml>=6.0.1"
]

[tool.setuptools]
packages = []
py-modules = ["__init__", "graphql_provider", "mode", "providers", "type", "url"]